--- a/VsQuickTest/VsQuickTest.csproj
+++ b/VsQuickTest/VsQuickTest.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="chap10-diagrams\manualDiagram\Car.cs" />
+    <Compile Include="chap10-diagrams\manualDiagram\Driver.cs" />
+    <Compile Include="chap11-unittest\main\Subscription.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickForm.cs">
@@ -54,9 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
+    <None Include="chap10-diagrams\manualDiagram\QuickDiagram.cd" />
+    <None Include="chap10-diagrams\QuickForm.cd" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="chap10-diagrams\manualDiagram\readme.txt" />
     <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +69,7 @@
       <DependentUpon>QuickForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
