--- a/VsQuickTestTest/VsQuickTestTest.csproj
+++ b/VsQuickTestTest/VsQuickTestTest.csproj
@@ -50,7 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="chap11-unittest\test\SubscriptionTest.cs" />
+    <Compile Include="chap11-unittest\SubscriptionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
