how to design form

--- a/VsQuickTest/VsQuickTest.csproj
+++ b/VsQuickTest/VsQuickTest.csproj
@@ -60,9 +60,36 @@
     <None Include="App.config" />
     <None Include="chap10-diagrams\manualDiagram\QuickDiagram.cd" />
     <None Include="chap10-diagrams\QuickForm.cd" />
+    <None Include="chap14-template\ErrorOne.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ErrorOne.txt</LastGenOutput>
+    </None>
+    <None Include="chap14-template\ClassFeatures.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ClassFeatures.txt</LastGenOutput>
+    </None>
+    <None Include="chap14-template\ForStatement.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ForStatement.txt</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="chap10-diagrams\manualDiagram\readme.txt" />
+    <Content Include="chap14-template\ClassFeatures.txt">
+      <DependentUpon>ClassFeatures.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Content>
+    <Content Include="chap14-template\ErrorOne.txt">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ErrorOne.tt</DependentUpon>
+    </Content>
+    <Content Include="chap14-template\ForStatement.txt">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ForStatement.tt</DependentUpon>
+    </Content>
     <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -70,7 +97,9 @@
       <DependentUpon>QuickForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
