--- a/VsQuickTest/App.config
+++ b/VsQuickTest/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="VsQuickTest.Properties.Settings.karlConnectionString"
+            connectionString="Data Source=(localDB)\Projects;Initial Catalog=karl;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
