--- a/VsQuickTest/VsQuickTest.csproj
+++ b/VsQuickTest/VsQuickTest.csproj
@@ -47,8 +47,28 @@
     <Compile Include="chap10-diagrams\manualDiagram\Car.cs" />
     <Compile Include="chap10-diagrams\manualDiagram\Driver.cs" />
     <Compile Include="chap11-unittest\Subscription.cs" />
+    <Compile Include="chap28-dataset\cases.cs">
+      <DependentUpon>cases.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="chap28-dataset\cases.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>cases.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="chap28-dataset\CasesWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="chap28-dataset\CasesWindow.Designer.cs">
+      <DependentUpon>CasesWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="QuickForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +92,21 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ForStatement.txt</LastGenOutput>
     </None>
+    <None Include="chap28-dataset\cases.xsc">
+      <DependentUpon>cases.xsd</DependentUpon>
+    </None>
+    <None Include="chap28-dataset\cases.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>cases.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="chap28-dataset\cases.xss">
+      <DependentUpon>cases.xsd</DependentUpon>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="chap10-diagrams\manualDiagram\readme.txt" />
@@ -93,6 +128,12 @@
     <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="chap28-dataset\cases.resx">
+      <DependentUpon>cases.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="chap28-dataset\CasesWindow.resx">
+      <DependentUpon>CasesWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="QuickForm.resx">
       <DependentUpon>QuickForm.cs</DependentUpon>
     </EmbeddedResource>
