--- a/VsQuickTestTest/VsQuickTestTest.csproj
+++ b/VsQuickTestTest/VsQuickTestTest.csproj
@@ -59,6 +59,9 @@
       <Name>VsQuickTest</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="readme.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
