--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ElementDetector\packages.config" />
+  <repository path="..\VsQuickTest\packages.config" />
   <repository path="..\VsQuickTest-Nunit\packages.config" />
   <repository path="..\WebApplicationQuick\packages.config" />
 </repositories>
